--- a/my-app/src/app/dashboard/dashboard.component.css
+++ b/my-app/src/app/dashboard/dashboard.component.css
@@ -1,55 +1,75 @@
-body{
-    background-color:#a8dadc;
-  }
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(43, 43, 51);
-    }
-    li {
-      display: inline;
-      float: left;
-    }
-    
-    li a {
-    display: block;
-    padding: 8px;
-    background-color: rgb(43, 43, 51);
-    padding: 15px;
-    color: white;
-  }
-  a:hover{
-background-color: #a8dadc;
-  }
-  .dashboard-item{
-    margin: 10px;
-    padding: 10px;
-    border-radius: 25px;
-    text-align:center;
-    box-shadow: 1px 1px #5c4733;
-  }
-  .chart{
-    border-radius: 5px;
-    background-color: lightblue;
-  }
-  .dashboard-button{
-    border-radius: 10px;
-    border:none;
-    background-color: #a3bcf9;
-    color:white;
-    margin: 2px;
-    outline:none;
-  }
-  .dashboard-button:active{
-    background-color: #497dff ;
-  }
-  .top_button{
-    font-size: 20px;
-    padding: 7px;
-  }
-  .h2{
-    text-align: middle;
-  }
+h1 {
+  text-align: center;
+  color: white;
+}
+
+body {
+  background-color: #a8dadc;
+}
+
+.section {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(43, 43, 51);
+}
+
+li {
+  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: rgb(43, 43, 51);
+  padding: 15px;
+  color: white;
+}
+
+a:hover {
+  background-color: #a8dadc;
+}
+
+.dashboard-item {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 1px 1px #5c4733;
+}
+
+.section {
+  border-radius: 5px;
+  background-color: pink;
+}
+
+.dashboard-button {
+  border-radius: 10px;
+  border: none;
+  background-color: #a3bcf9;
+  color: white;
+  margin: 2px;
+  outline: none;
+}
+
+.dashboard-button:active {
+  background-color: #497dff;
+}
+
+.top_button {
+  font-size: 20px;
+  padding: 7px;
+}
+
+.h2 {
+  text-align: middle;
+}
