--- a/my-app/src/app/expense/expense.component.css
+++ b/my-app/src/app/expense/expense.component.css
@@ -3,7 +3,8 @@
     border-collapse: collapse;
     border-spacing: 0;
     table-layout: fixed;
-    border: 1px solid black;    
+    border: 1px solid black; 
+    background-color: darkgray;   
 }
 
 .expenseTableTr{
@@ -13,14 +14,42 @@
     width: 100%;
 }
 
+.expenseTableTr:hover {
+    animation: bounce 0.5s linear;
+    border-collapse: separate;
+    outline: solid 5px #FC5185;
+}
+
+.incomeTableTr:hover {
+    animation: bounce 0.5s linear;
+    border-collapse: separate;
+    outline: solid 5px #8bf0d1;
+}
+
+@keyframes bounce {
+	20% {
+		transform: translateY(-6px);
+	}
+}
+
 .incomeTableTr{
     background-color: #F5DEB3;
     border: 1px solid black;
     border-collapse: collapse;    
     width: 100%;
+    margin: 2px;
 }
 
 
 .expenseTableHeaderRow{
     background-color: lightgrey;
 }
+
+.expense_button {
+    border-radius: 10px;
+    border: none;
+    background-color: #a3bcf9;
+    color: white;
+    margin: 2px;
+    outline: none;
+  }
