--- a/my-app/src/app/expense/expense.component.html
+++ b/my-app/src/app/expense/expense.component.html
@@ -1,14 +1,17 @@
-<button  class = "expense_button" (click)="newExpense(false)" >New Expense</button>
+<h2>Balance {{ balance }}</h2>
+<h2>Expenses and Incomes </h2>
+
+<button  class = "expense_button top_button" (click)="newExpense(false)" >New Expense</button>
 
 <!-- If creating income we just call the same method but pass in parameter true to specify it is an income-->
-<button class = "expense_button" (click)="newExpense(true)">New Income</button>
+<button class = "expense_button " (click)="newExpense(true)">New Income</button>
 
 <!-- todo: total monthly expenses -->
 <!-- todo: total monthly income -->
 <!-- todo: sort expenses by category -->
 
-<h2>Balance {{ balance }}</h2>
-<h2>Expenses and Incomes </h2>
+
+
 
 <table class="expenseTable">
 
@@ -23,30 +26,30 @@
     </tr>
 
     <!-- Income Table Rows - Always at Top -->
-    <tr *ngFor="let income of incomes" class="incomeTableTr" (click)="editExpense(income.name, true)">
-        <td>{{income.name}}</td>
-        <td>{{income.amount}}</td>
-        <td>{{income.info.type}}</td>
-        <td>{{income.info.category}}</td>
+    <tr *ngFor="let income of incomes" class="incomeTableTr">
+        <td (click)="editExpense(income.name, true)">{{income.name}}</td>
+        <td (click)="editExpense(income.name, true)">{{income.amount}}</td>
+        <td (click)="editExpense(income.name, true)">{{income.info.type}}</td>
+        <td (click)="editExpense(income.name, true)">{{income.info.category}}</td>
 
         <!-- Buttons at end of each expense row -->
         <td><button class = "expense_button" (click)="editExpense(income.name, true)">Edit</button>
-        <button  class = "expense_button" (click)="promptDeleteExpense(income.name)">Delete</button>
+            <button  class = "expense_button" (click)="promptDeleteExpense(income.name)">Delete</button>
             <div *ngIf="showDeletePrompt && income.name == expenseBeingDeleted"> Are you sure?</div> 
             <button *ngIf="showDeletePrompt && income.name == expenseBeingDeleted" (click)="deleteIncome(income.name)">Delete</button>
         </td> 
     </tr>
 
     <!-- Expense Data Rows -->
-    <tr *ngFor="let expense of expenses" class="expenseTableTr" (click)="editExpense(expense.name, false)">
-        <td>{{expense.name}}</td>
-        <td>{{expense.amount}}</td>
-        <td>{{expense.info.type}}</td>
-        <td>{{expense.info.category}}</td>
+    <tr *ngFor="let expense of expenses" class="expenseTableTr">
+        <td (click)="editExpense(expense.name, false)">{{expense.name}}</td>
+        <td (click)="editExpense(expense.name, false)">{{expense.amount}}</td>
+        <td (click)="editExpense(expense.name, false)">{{expense.info.type}}</td>
+        <td (click)="editExpense(expense.name, false)">{{expense.info.category}}</td>
 
         <!-- Buttons at end of each expense row -->
         <td><button class = "expense_button" (click)="editExpense(expense.name, false)">Edit</button>
-        <button class = "expense_button" (click)="promptDeleteExpense(expense.name)">Delete</button>
+            <button class = "expense_button" (click)="promptDeleteExpense(expense.name)">Delete</button>
             <div *ngIf="showDeletePrompt && expense.name == expenseBeingDeleted"> Are you sure?</div> 
             <button class = "expense_button" *ngIf="showDeletePrompt && expense.name == expenseBeingDeleted" (click)="deleteExpense(expense.name)">Delete</button>
         </td> 
