--- a/my-app/src/app/budget/budget.component.html
+++ b/my-app/src/app/budget/budget.component.html
@@ -1,9 +1,13 @@
-<h3>My Budgets</h3>
-<button class="dashboard-button" (click)="changeMode('dayly')">Daily</button>
+<button class="dashboard-button" (click)="changeMode('daily')">Daily</button>
 <button class="dashboard-button" (click)="changeMode('weekly')">Weekly</button>
 <button class="dashboard-button" (click)="changeMode('monthly')">Monthly</button>
 <button class="dashboard-button" (click)="changeMode('yearly')">Yearly</button>
 
-<h2>Your {{ mode }} Spending Budget</h2>
-<p>50</p> <!-- [budgetAmount] -->
-<button >Play Again</button><!--(click)="incEltNbr()" i am eating ass rn brb -marcus-->
+<div>
+    <div><span>Earnings: </span>{{outputIncome}}</div>
+    <div><span>Spendings: </span>{{outputExpense}}</div>
+    <div>
+        <h2>My {{mode}} budgeting total: {{outputBudget}}</h2> <!-- [budgetAmount] -->
+    </div>
+    <!--<button >Play Again</button>(click)="incEltNbr()" -->
+</div>
