--- a/my-app/src/app/dashboard/dashboard.component.html
+++ b/my-app/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,9 @@
-<h1 id="dashboard" class="dashboard">My Dashboard</h1> 
-<!--<mat-slide-toggle>Mode Switch</mat-slide-toggle> -->
+<h1 id="dashboard" class="dashboard">Dashboard</h1> 
+<!--<mat-slide-toggle style="right: 0px; text-align: right;">Mode Switch</mat-slide-toggle>-->
 
-<h2> {{title}}</h2>
+<h2> Balances </h2>
 <div class="section">
+  <h2>{{title}}</h2>
   <div style="text-align: center">
     <button class="dashboard-button top_button" (click)="clickExpensesView()">Expenses</button>
     <button class="dashboard-button top_button" (click)="clickIncomeView()">Income</button>
@@ -38,10 +39,7 @@
 </div>
 
 
-<h2>Details</h2>
+<h2>My Budgets</h2>
 <div class="section">
   <app-budget></app-budget>
 </div>
-
-
-<h2>Luxury Spending<h2>
