--- a/my-app/src/app/expense/expense.component.css
+++ b/my-app/src/app/expense/expense.component.css
@@ -1,3 +1,10 @@
+
+h1 {
+    padding-top: 25px;
+    text-align: center;
+    color: black;
+  }
+
 .expenseTable{
     width: 100%;
     border-collapse: collapse;
